# xpma-python

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: api.md  choosing-a-filter.md  getting-started.md  theory.md
examples/: 01_smoothing_comparison.py  02_step_response.py  03_streaming_and_probe.py  README.md
proofs/: README.md  disc_final.py  disc_sympy.py  disc_verify1.py  disc_verify2.py  disc_verify3.py  disc_verify4.py  rmax_asymptotics.py  rmax_closed_form.py  rmax_correspondence.py  rmax_discrete.py  rmax_fractional.py  rmax_numeric_targets.py  rmax_premode_proof.py  rmax_sign_structure.py  rmax_symbolic.py  verify_discrete_transfer.py  verify_holt_quadratic.py  verify_qxepma.py  verify_qxepma_fractional.py  verify_tema_contrast.py  verify_zero_order_multiema.py
src/xpma/: __init__.py  apex_fast_ema.py  apex_lead_ema.py  convex_fast_ema.py  convex_lead_ema.py  damped_xepma.py  eifema.py  ema.py  fast_ema.py  fractional_smoothness.py  ifema.py  lag_reduction.py  lead_ema.py  lead_xepma.py  multi_ema.py  quadratic_xepma.py  r_crit.py  reverse_ema.py  reverse_filter.py  reverse_multi_ema.py  secant_solver.py  xepma.py  xpma.py
tests/: golden_baseline.json  test_apex_ema.py  test_convex_fast_ema.py  test_convex_lead_ema.py  test_core.py  test_golden_baseline.py  test_lead_xepma.py  test_leadema.py  test_r_crit.py  test_reverse_filter.py  test_reverse_roundtrip.py  test_sub_unit_order.py  test_xepma.py
