[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xpma"
version = "0.1.0"
description = "Exponentially weighted zero-lag smoothers and technical-analysis filters (the XPMA / XEPMA family)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marcus John Hendry Don", email = "marcus@smoothinglab.com" }]
keywords = [
    "signal-processing",
    "smoothing",
    "moving-average",
    "ema",
    "filter",
    "zero-lag",
    "low-lag",
    "technical-analysis",
    "time-series",
    "iir-filter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial :: Investment",
]
# Core library is pure Python standard library (only `math`); no runtime dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/SmoothingLab/xpma-python"
Repository = "https://github.com/SmoothingLab/xpma-python"
Issues = "https://github.com/SmoothingLab/xpma-python/issues"

[project.optional-dependencies]
# Test/dev tooling.
dev = ["pytest>=7"]
# For running the plotting example scripts under examples/; not needed by the library itself.
examples = ["numpy>=1.21", "matplotlib>=3.5"]
# For running the machine-checkable proof scripts under proofs/ (symbolic algebra,
# high-precision arithmetic and numeric grids); not needed by the library itself.
proofs = ["sympy>=1.10", "mpmath>=1.2", "numpy>=1.21", "matplotlib>=3.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/xpma"]

[tool.hatch.build.targets.sdist]
include = ["src/xpma", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
